--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,9 @@ dependencies {
 dependencies {
     compile 'org.jsoup:jsoup:1.9.2'
 }
+dependencies{
+    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
+}
 
 test {
     systemProperties 'property': 'value'
